--- a/site/site.css
+++ b/site/site.css
@@ -228,9 +228,9 @@ body {
     color: #415b5a;
     margin: 10px 0;
 }
-.shoppingCartSideBar p{
+.shoppingCartSideBar>p{
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
     font-family: 'Comic Sans MS', sans-serif;
     color: #415b5a;
     margin: 10px 0;
@@ -241,14 +241,14 @@ body {
     background-color: #dcfc0c;
     right: 20%;
     top: 0;
-    width: 24px;
+    width: 22px;
     height: auto;
     border-radius: 15px;
     text-align: center;
     color: red;
     font-family: Encode Sans Semi Condensed;
     font-weight: 600;
-    font-size: 13px;
+    font-size: 10px;
     padding: 3px;
 }
 
@@ -257,14 +257,14 @@ body {
     background-color: #dcfc0c;
     right: 0;
     top: 0;
-    width: 24px;
+    width: 22px;
     height: auto;
     border-radius: 15px;
     text-align: center;
     color: red;
     font-family: Encode Sans Semi Condensed;
     font-weight: 600;
-    font-size: 13px;
+    font-size: 10px;
     padding: 3px;
 }
 
@@ -337,13 +337,19 @@ tr span{
 .tableBodySideBar tr td {
     padding: 11px 6px;
 }
+.tableBodySideBar tr{
+    border-bottom: 1px dashed #d7d7d7;
+}
+.tableBodySideBar tr:hover{
+    background-color: #7be6ff;
+}
 .list-item-added table tbody tr img{
     width: 25%;
     border-radius: 50%;
 }
 
 .list-item-added span{
-    color:#ca1c1c;
+    color:#3E4095;
     white-space: nowrap;
 }
 .list-item-added li span:first-child{
@@ -648,6 +654,10 @@ tr span{
     color: #d61b2a;
     font-family:'Comic Sans MS', sans-serif;
     border: none;
+}
+
+.btn-delete-sidebar{
+    background-color: unset;
 }
 .quantity{
     padding: 0 !important
