--- a/site/index.css
+++ b/site/index.css
@@ -72,6 +72,10 @@ html {
   align-items: center;
 }
 
+.product-info .text-ellipsis p{
+  display: none;
+}
+
 .product-image {
   width: 50px;
   height: 50px;
