--- a/site/main.css
+++ b/site/main.css
@@ -437,6 +437,7 @@ td span{
 
 .slider-main3 {
     border-radius: 5px;
+    padding-bottom: 10px;
 }
 
 
@@ -523,8 +524,8 @@ td span{
     position: absolute; /* Vị trí tuyệt đối */
     top: 50%; /* Đặt nút ở giữa theo chiều dọc */
     transform: translateY(-50%); /* Căn giữa nút theo chiều dọc */
-    width: 45px; /* Độ rộng của nút */
-    height: 45px; /* Chiều cao của nút */
+    width: 40px; /* Độ rộng của nút */
+    height: 40px; /* Chiều cao của nút */
     background-color: rgba(255, 255, 255, 0.9); /* Nền trắng trong suốt */
     color: #333; /* Màu của biểu tượng */
     display: flex;
@@ -610,13 +611,16 @@ td span{
 .heart-main3{
     position: absolute;
     right: 10px;
-    top: 0;
+    top: 7px;
     font-size: 30px;
     font-weight: 400;
     transform: scale(0);
     color: rgb(224, 93, 93);
     cursor: pointer;
     transition: transform 0.3s ease;
+    width: 30px;
+    height: 30px;
+    z-index: 10;
 }
 
 
@@ -889,6 +893,13 @@ td span{
     width: 150px;
 }
 
+.main-9-container .main-9-container-tab:nth-child(4) img{
+    padding: 22px;
+}
+.main-9-container .main-9-container-tab:nth-child(5) img{
+    padding: 19px 0;
+}
+
 .main-10{
     margin-top: 50px;
     display: flex;
@@ -993,7 +1004,7 @@ gap: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     z-index: 1000; /* Đặt bảng thông báo lên trên lớp phủ */
     text-align: center;
-    width: 30vw;
+    width: 64vw;
     background-color: #fff;
 }
 
